WIX ticket #3
**Description**:
 - implement data pods control
 - implement agent control with out agent policies save

### Related Tickets: #3